terraform/stage5-airbyte/airbyte-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airbyte-ingress
  namespace: airbyte
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:xxxxxx:xxxxxxx:certificate/xxxxxxx
    alb.ingress.kubernetes.io/ssl-redirect: "443"
spec:
  ingressClassName: alb
  rules:
    - host: rachel.airbyte.com   # must match your /etc/hosts entry
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: airbyte-v2-airbyte-server-svc
                port:
                  number: 8001   # from "Port" field in Service
